gltransformation: graphene multiplication order has changed

https://bugzilla.gnome.org/show_bug.cgi?id=733510